--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="icon" href="dist/favicon.ico">
 </head>
 
-<body id="page-top">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" data-aos-easing="slide" data-aos-duration="800" data-aos-delay="0">
   <noscript>
     <p class="mt-5">
       For full functionality of this site it is necessary to enable JavaScript.
