--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- <meta name="theme-color" content="#048fc5"> -->
   <meta name="description" content="Mitchell's portfolio showcasing his software design projects">
-  <meta name="keywords" content="Mitchell Q, Mitchell Quarrie, Mitch Q, Mitch Quarrie, Software Development, Web Development, Mobile Development, App Development, New Zealand, Developer, Mitch, Mitchell, Web Dev">
+  <meta name="keywords"
+    content="Mitchell Q, Mitchell Quarrie, Mitch Q, Mitch Quarrie, Software Development, Web Development, Mobile Development, App Development, New Zealand, Developer, Mitch, Mitchell, Web Dev">
   <meta name="author" content="Mitchell Quarrie (https://github.com/mitchellq)">
 
   <title>Mitchell Quarrie - Developer Portfolio</title>
@@ -18,6 +20,11 @@
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary" />
 
+  <!-- 3rd Party CSS -->
+  <link rel="stylesheet" href="src/styles/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="src/styles/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="src/styles/css/jquery.fancybox.min.css">
+
   <!-- Custom scripts & styles for this template -->
   <link href="dist/assets/bundle.css" rel="stylesheet">
   <script src="dist/assets/bundle.js" async></script>
@@ -26,7 +33,8 @@
   <link rel="icon" href="dist/favicon.ico">
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" data-aos-easing="slide" data-aos-duration="800" data-aos-delay="0">
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" data-aos-easing="slide"
+  data-aos-duration="800" data-aos-delay="0">
   <noscript>
     <p class="mt-5">
       For full functionality of this site it is necessary to enable JavaScript.
@@ -37,4 +45,5 @@
 
   <div id="root"></div>
 </body>
+
 </html>
