--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   </noscript>
 
   <div id="root"></div>
+
+   <!-- LinkedIn badge script -->
+   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 
 </html>
