--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
   <meta name="twitter:card" content="summary" />
 
   <!-- 3rd Party CSS -->
-  <link rel="stylesheet" href="src/styles/css/owl.carousel.min.css">
-  <link rel="stylesheet" href="src/styles/css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="src/styles/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="/src/styles/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="/src/styles/css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="/src/styles/css/jquery.fancybox.min.css">
 
   <!-- Custom scripts & styles for this template -->
-  <link href="dist/assets/bundle.css" rel="stylesheet">
-  <script src="dist/assets/bundle.js" async></script>
+  <link href="/dist/assets/bundle.css" rel="stylesheet">
+  <script src="/dist/assets/bundle.js" async></script>
 
   <!-- Favicon -->
-  <link rel="icon" href="dist/favicon.ico">
+  <link rel="icon" href="/dist/favicon.ico">
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" data-aos-easing="slide"
