Add Recpatchpa js

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <link rel="stylesheet" href="/src/styles/css/owl.theme.default.min.css">
   <link rel="stylesheet" href="/src/styles/css/jquery.fancybox.min.css">
 
+  <!-- reCAPTCHA v2 Script -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
   <!-- Custom scripts & styles for this template -->
   <link href="/dist/assets/bundle.css" rel="stylesheet">
   <script src="/dist/assets/bundle.js" async></script>
