Update twitter and opengraph SEO

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- Open Graph / Twitter SEO -->
   <meta property="og:url" content="https://mitchellq.dev/" />
   <meta property="og:title" content="Mitchell Quarrie - Developer Portfolio" />
-  <meta property="og:description" content="Mitchell's portfolio showcasing his software design projects" />
-  <meta property="og:image" content="" />
+  <meta property="og:description" content="Mitchell Quarrie - Software Developer located in Invercargill, New Zealand. Send me an email or download my CV to contact me." />
+  <meta property="og:image" content="https://mitchellq.dev/dist/images/seo.jpg" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary" />
 
