--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <link href="/dist/assets/bundle.css" rel="stylesheet">
   <script src="/dist/assets/bundle.js" async></script>
 
+  <!-- Font Awesome -->
+  <link href="/src/Vendor/FontAwesome/css/all.css" rel="stylesheet">
+
   <!-- Favicon -->
   <link rel="icon" href="/dist/favicon.ico">
 </head>
