--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   <script src="/dist/assets/bundle.js" async></script>
 
   <!-- Font Awesome -->
-  <link href="/src/Vendor/FontAwesome/css/all.css" rel="stylesheet">
+  <script defer src="/src/Vendor/FontAwesome/js/all.js"></script>
+
 
   <!-- Favicon -->
   <link rel="icon" href="/dist/favicon.ico">
